Contact Us frontend

--- a/resources/views/frontend/pages/blog.html
+++ b/resources/views/frontend/pages/blog.html
@@ -180,7 +180,7 @@
 
 								<!-- li end -->
 								<li class="has-dropdown pull-left margin-right-zero">
-									<a href="contact.html">Contact Us</a>
+									<a href="contact.blade.php">Contact Us</a>
 								</li>
 								<!-- li end -->
 							</ul>
