--- a/resources/views/frontend/pages/make-claim.html
+++ b/resources/views/frontend/pages/make-claim.html
@@ -179,7 +179,7 @@
 
 								<!-- li end -->
 								<li class="margin-right-zero">
-									<a href="contact.html">Contact Us</a>
+									<a href="contact.blade.php">Contact Us</a>
 								</li>
 								<!-- li end -->
 							</ul>
