--- a/resources/views/frontend/pages/branch-download.html
+++ b/resources/views/frontend/pages/branch-download.html
@@ -173,7 +173,7 @@
 
                                 <!-- li end -->
                                 <li class="has-dropdown pull-left margin-right-zero">
-                                    <a href="contact.html">Contact Us</a>
+                                    <a href="contact.blade.php">Contact Us</a>
                                 </li>
                                 <!-- li end -->
                             </ul>
